--- a/file-resource-provider-fiat/file-resource-provider-fiat.gradle
+++ b/file-resource-provider-fiat/file-resource-provider-fiat.gradle
@@ -33,9 +33,12 @@ dependencies {
   compileOnly(group: 'com.netflix.spinnaker.fiat', name: 'fiat-roles', version: "${fiatVersion}")
   compileOnly(group: "com.netflix.spectator", name: "spectator-api", version: "0.75.0")
   compileOnly(group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8')
+
   testImplementation(group: "com.netflix.spinnaker.kork", name: "kork-plugins", version: "${korkVersion}")
   testImplementation(group: "com.netflix.spectator", name: "spectator-api", version: "0.75.0")
   testImplementation(group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8')
+  testImplementation(group: 'com.netflix.spinnaker.fiat', name: 'fiat-core', version: "${fiatVersion}")
+  testImplementation(group: 'com.netflix.spinnaker.fiat', name: 'fiat-roles', version: "${fiatVersion}")
 
   testImplementation(group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.3.1")
   testImplementation(group: "io.strikt", name: "strikt-core", version: "0.26.1")
