--- a/file-resource-provider-fiat/file-resource-provider-fiat.gradle
+++ b/file-resource-provider-fiat/file-resource-provider-fiat.gradle
@@ -2,12 +2,16 @@ buildscript {
   repositories {
     mavenCentral()
   }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+  }
 }
 
 apply plugin: "io.spinnaker.plugin.service-extension"
 apply plugin: "maven-publish"
 apply plugin: "kotlin"
 apply plugin: "kotlin-kapt"
+apply plugin: "kotlin-spring"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -39,6 +43,13 @@ dependencies {
   testImplementation(group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8')
   testImplementation(group: 'com.netflix.spinnaker.fiat', name: 'fiat-core', version: "${fiatVersion}")
   testImplementation(group: 'com.netflix.spinnaker.fiat', name: 'fiat-roles', version: "${fiatVersion}")
+
+  testImplementation "com.netflix.spinnaker.orca:orca-api:${orcaVersion}"
+  testImplementation "com.netflix.spinnaker.orca:orca-api-tck:${orcaVersion}"
+  testImplementation "com.netflix.spinnaker.orca:orca-queue:${orcaVersion}"
+  testImplementation "com.netflix.spinnaker.kork:kork-plugins-tck:${korkVersion}"
+  testImplementation "com.netflix.spinnaker.fiat:fiat-api:$fiatVersion"
+  testImplementation("javax.servlet:javax.servlet-api:4.0.1")
 
   testImplementation(group: "org.junit.jupiter", name: "junit-jupiter-api", version: "5.3.1")
   testImplementation(group: "io.strikt", name: "strikt-core", version: "0.26.1")
