--- a/.github/workflows/latestFiat.yml
+++ b/.github/workflows/latestFiat.yml
@@ -1,4 +1,4 @@
-name: Latest Clouddriver
+name: Latest Fiat
 
 on:
   schedule:
@@ -11,10 +11,14 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+      - name: set up java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
       - name: get dependency name to update
         id: dependency_name
         run: |
-          echo ::set-output name=dependency::clouddriver
+          echo ::set-output name=dependency::fiat
       - name: get current version
         id: get_current
         run: |
