fix(release): update services

--- a/file-resource-provider-fiat/file-resource-provider-fiat.gradle
+++ b/file-resource-provider-fiat/file-resource-provider-fiat.gradle
@@ -3,6 +3,7 @@ buildscript {
     mavenCentral()
   }
   dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
   }
 }
@@ -20,7 +21,10 @@ repositories {
   mavenLocal()
   mavenCentral()
   jcenter()
-  maven { url "http://dl.bintray.com/spinnaker/spinnaker/" }
+  maven { url "http://dl.bintray.com/spinnaker/spinnaker/"}
+
+  // Used for testing against the Google product releases.
+  maven { url "https://spinnaker-releases.bintray.com/jars" }
 }
 
 spinnakerPlugin {
