--- a/file-resource-provider-fiat/file-resource-provider-fiat.gradle
+++ b/file-resource-provider-fiat/file-resource-provider-fiat.gradle
@@ -20,7 +20,7 @@ repositories {
   mavenLocal()
   mavenCentral()
   jcenter()
-  maven { url "http://dl.bintray.com/spinnaker/spinnaker/" }
+  maven { url "https://spinnaker-releases.bintray.com/jars" }
 }
 
 spinnakerPlugin {
