--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
+spinnakerRelease=1.21.4
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.0.4
 pf4jVersion=3.2.0
-korkVersion=7.44.2
-fiatVersion=1.20.1
-orcaVersion=8.7.0
+korkVersion=7.45.9
+fiatVersion=1.12.0-20200625140019
+orcaVersion=2.15.2-20200806164929
 kotlinVersion=1.3.50
+
