--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
+spinnakerRelease=1.23.2
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.0.4
 pf4jVersion=3.2.0
-korkVersion=7.44.2
-fiatVersion=1.20.1
-orcaVersion=8.7.0
+korkVersion=7.78.0
+fiatVersion=1.14.0-20201009170017
+orcaVersion=2.17.0-20201014010017
 kotlinVersion=1.3.50
+
