--- a/file-resource-provider-fiat/file-resource-provider-fiat.gradle
+++ b/file-resource-provider-fiat/file-resource-provider-fiat.gradle
@@ -21,7 +21,7 @@ repositories {
   mavenLocal()
   mavenCentral()
   jcenter()
-  maven { url "http://dl.bintray.com/spinnaker/spinnaker/"}
+  maven { url "https://spinnaker-releases.bintray.com/jars"}
 
   // Used for testing against the Google product releases.
   maven { url "https://spinnaker-releases.bintray.com/jars" }
