--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
+spinnakerRelease=master-20201117230016
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.10.0
 pf4jVersion=3.2.0
 korkVersion=7.88.0
-fiatVersion=1.26.0
-orcaVersion=8.12.0
+fiatVersion=1.14.1-20201113170017
+orcaVersion=2.18.0-20201117230016
 kotlinVersion=1.3.50
+
