--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
+spinnakerRelease=1.22.2
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.0.4
 pf4jVersion=3.2.0
-korkVersion=7.44.2
-fiatVersion=1.20.1
-orcaVersion=8.7.0
+korkVersion=7.59.0
+fiatVersion=1.13.0-20200817170018
+orcaVersion=2.16.0-20200817170018
 kotlinVersion=1.3.50
+
