--- a/gradle.properties
+++ b/gradle.properties
@@ -1,27 +1,9 @@
-spinnakerRelease=master-20210209140018
+spinnakerRelease=1.25.4
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.10.0
 pf4jVersion=3.2.0
 korkVersion=7.99.1
-fiatVersion=1.15.0-20210208200018
+fiatVersion=1.15.0-20210211170021
 orcaVersion=2.19.0-20210209140018
 kotlinVersion=1.3.50
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
