--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-spinnakerRelease=master-20210226170018
+spinnakerRelease=1.27.0
 org.gradle.parallel=true
 
 spinnakerGradleVersion=8.10.0
 pf4jVersion=3.2.0
-korkVersion=7.100.2
-fiatVersion=1.15.1-20210225140018
-orcaVersion=2.20.0-20210225140018
+korkVersion=7.115.2
+fiatVersion=1.28.4
+orcaVersion=8.18.4
 kotlinVersion=1.3.50
